Modernize KDB Studio for PyCharm Community 2026